<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="25dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/myImage"
        android:layout_width="155dp"
        android:layout_height="100dp"
        android:src="@drawable/dior"
        android:background=""
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inter"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="45sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/editTextVal1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valeur1"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:inputType="numberDecimal" />
    <EditText
        android:id="@+id/editTextVal2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valeur2"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="creditCardNumber"
        android:inputType="numberDecimal"
        />
    <TextView
        android:id="@+id/textViewResultat"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/resultat"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/buttonProduit"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:text="@string/produit"
        android:textSize="35sp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/buttonDivision"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/division"
        android:textSize="35sp" />

</LinearLayout>
